--- a/popup.css
+++ b/popup.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  animation: animatedBackground 15s cubic-bezier(0.9, 0.6, 0.55, .44) infinite;
+  animation: animatedBackground 15s cubic-bezier(0.9, 0.6, 0.55, 0.44) infinite;
   background-blend-mode: screen;
   background-image: url("images/bubbles.png");
   background-position: right 48% bottom 192%;
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  color: #fff;
+  color: white;
   font-size: .95rem;
   font-weight: 400;
   line-height: 1.5;
@@ -25,7 +25,7 @@ h1 {
 }
 
 p {
-  color: #fff;
+  color: white;
   font-size: .8rem;
   font-weight: 300;
   line-height: 1.3;
@@ -33,10 +33,18 @@ p {
   margin-top: 0;
 }
 
+a {
+  color: white;
+}
+
 code {
   color: gold;
   display: inline;
   margin-left: 3px;
+}
+
+#prd {
+  margin-left: 13px;
 }
 
 @keyframes animatedBackground {
