--- a/popup.css
+++ b/popup.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
   color: white;
-  font-size: .95rem;
+  font-size: 0.95rem;
   font-weight: 400;
   line-height: 1.5;
   margin: 0 auto;
@@ -26,7 +26,7 @@ h1 {
 
 p {
   color: white;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 300;
   line-height: 1.3;
   margin-bottom: 3px;
@@ -38,7 +38,7 @@ a {
 }
 
 code {
-  font-size: .83rem;
+  font-size: 0.83rem;
   font-weight: 500;
   text-shadow: 2px 2px 0 #000;
 }
@@ -53,13 +53,13 @@ code {
 }
 
 @keyframes animatedBackground {
-	0% {
-		background-position: 0% 0%
-	}
-	50% {
-		background-position: 0% 50%
-	}
-	100% {
-		background-position: 50% 100%
-	}
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 50% 100%;
+  }
 }
